--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>gta-ynov-vue</title><link href=/css/app.6172a444.css rel=preload as=style><link href=/css/chunk-vendors.3965f201.css rel=preload as=style><link href=/js/app.0c6a9217.js rel=preload as=script><link href=/js/chunk-vendors.31aa186e.js rel=preload as=script><link href=/css/chunk-vendors.3965f201.css rel=stylesheet><link href=/css/app.6172a444.css rel=stylesheet></head><body><noscript><strong>We're sorry but gta-ynov-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.31aa186e.js></script><script src=/js/app.0c6a9217.js></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>MyApp</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+</html>
